src/components/common/toast-manager/ToastManager.module.css
.overallContainer {
  position: fixed;
  top: 0px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 100vw;
  height: 100vh;
  pointer-events: none;
}

.toastContainer {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  margin-bottom: 30px;
}

